--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	<scm>
         <url>git@github.com:maxxkrakoa/lineman-maven-plugin.git</url>
         <connection>scm:git@github.com:maxxkrakoa/lineman-maven-plugin.git</connection>
-        <developerConnection>scm:git@github.com:maxxkrakoa/lineman-maven-plugin.git</cdeveloperCnnection>
+        <developerConnection>scm:git@github.com:maxxkrakoa/lineman-maven-plugin.git</developerConnection>
     </scm>
 
 	<developers>
